apps/prd/domotique/homeassistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant
          ports:
          - containerPort: 8123
            protocol: TCP
            name: http
          volumeMounts:
          - mountPath: "/config"
            name: data
          - name: config
            mountPath: "/config/configuration.yaml"
            subPath: "configuration.yaml"
            readOnly: false
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: homeassistant
      - name: config
        configMap:
          name: homeassistant
      dnsConfig:
        options:
        - name: ndots
          value: "1"
