apps/prd/domotique/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123
  selector:
    app: homeassistant
  type: ClusterIP
